[workspace]
members = [
    "bin/host",
    "bin/eth-proofs",
    "crates/executor/guest",
    "crates/executor/host",
    "crates/mpt",
    "crates/primitives",
    "crates/provider",
    "crates/storage/rpc-db",
    "crates/storage/witness-db",
]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
tracing = { version = "0.1.40", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
reqwest = "0.12.9"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
hex-literal = "0.4.1"
rayon = "1.10.0"
rlp = "0.5.2"

# workspace
rpc-db = { path = "./crates/storage/rpc-db" }
witness-db = { path = "./crates/storage/witness-db" }
guest-executor = { path = "./crates/executor/guest" }
host-executor = { path = "./crates/executor/host" }
mpt = { path = "./crates/mpt" }
primitives = { path = "./crates/primitives" }
provider = { path = "./crates/provider" }

# Ziren
zkm-build = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-core-executor = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-prover = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren" }

# zkm-build = { path = "../Ziren/crates/build" }
# zkm-core-executor = { path = "../Ziren/crates/core/executor" }
# zkm-prover = { path = "../Ziren/crates/prover" }
# zkm-sdk = { path = "../Ziren/crates/sdk" }

# reth
reth-primitives-traits = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-consensus = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-consensus-common = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-evm = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-evm-ethereum = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-optimism-evm = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-optimism-primitives = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-storage-errors = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-trie = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-trie-common = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-chainspec = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-optimism-chainspec = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-execution-types = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-errors = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false, features = ["serde"] }
reth-optimism-consensus = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-optimism-forks = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }
reth-stateless = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.8.3", default-features = false }

# reth-primitives-traits = { path = "../patch/reth/crates/primitives-traits", default-features = false }
# reth-consensus = { path = "../patch/reth/crates/consensus/consensus", default-features = false }
# reth-consensus-common = { path = "../patch/reth/crates/consensus/common", default-features = false }
# reth-evm = { path = "../patch/reth/crates/evm/evm", default-features = false }
# reth-evm-ethereum = { path = "../patch/reth/crates/ethereum/evm", default-features = false }
# reth-optimism-evm = { path = "../patch/reth/crates/optimism/evm", default-features = false }
# reth-optimism-primitives = { path = "../patch/reth/crates/optimism/primitives", default-features = false }
# reth-storage-errors = { path = "../patch/reth/crates/storage/errors", default-features = false }
# reth-trie = { path = "../patch/reth/crates/trie/trie", default-features = false }
# reth-trie-common = { path = "../patch/reth/crates/trie/common", default-features = false }
# reth-trie-zkvm = { path = "../patch/reth/crates/trie/zkvm", default-features = false }
# reth-chainspec = { path = "../patch/reth/crates/chainspec", default-features = false }
# reth-optimism-chainspec = { path = "../patch/reth/crates/optimism/chainspec", default-features = false }
# reth-execution-types = { path = "../patch/reth/crates/evm/execution-types", default-features = false }
# reth-errors = { path = "../patch/reth/crates/errors", default-features = false }
# reth-ethereum-consensus = { path = "../patch/reth/crates/ethereum/consensus", default-features = false }
# reth-ethereum-primitives = { path = "../patch/reth/crates/ethereum/primitives", default-features = false, features = ["serde"] }
# reth-optimism-consensus = { path = "../patch/reth/crates/optimism/consensus", default-features = false }
# reth-optimism-forks = { path = "../patch/reth/crates/optimism/hardforks", default-features = false }
# reth-stateless = { path = "../patch/reth/crates/stateless", default-features = false }

# revm
revm = { git = "https://github.com/ziren-patches/revm", branch = "patch-29.0.1", features = [
    "serde",
    "kzg-rs",
    "bn",
], default-features = false }
revm-bytecode = { git = "https://github.com/ziren-patches/revm", branch = "patch-29.0.1", default-features = false }
revm-database = { git = "https://github.com/ziren-patches/revm", branch = "patch-29.0.1", default-features = false }
revm-state = { git = "https://github.com/ziren-patches/revm", branch = "patch-29.0.1", default-features = false }
revm-primitives = { git = "https://github.com/ziren-patches/revm", branch = "patch-29.0.1", features = [
    "serde",
], default-features = false }
revm-interpreter = { git = "https://github.com/ziren-patches/revm", branch = "patch-29.0.1", default-features = false }
revm-precompile = { git = "https://github.com/ziren-patches/revm", branch = "patch-29.0.1", default-features = false }
revm-database-interface = { git = "https://github.com/ziren-patches/revm", branch = "patch-29.0.1", default-features = false }
op-revm = { git = "https://github.com/ziren-patches/revm", branch = "patch-29.0.1", default-features = false }
revm-inspectors = { git = "https://github.com/ziren-patches/revm-inspectors", branch = "patch-0.19.0" }

# revm = { path = "../patch/revm/crates/revm", features = [
#     "serde",
#     "kzg-rs",
# ], default-features = false }
# revm-bytecode = { path = "../patch/revm/crates/bytecode", default-features = false }
# revm-state = { path = "../patch/revm/crates/state", default-features = false }
# revm-primitives = { path = "../patch/revm/crates/primitives", features = [
#     "serde",
# ], default-features = false }
# revm-interpreter = { path = "../patch/revm/crates/interpreter", default-features = false }
# revm-precompile = { path = "../patch/revm/crates/precompile", default-features = false }
# revm-database-interface = { path = "../patch/revm/crates/database/interface", default-features = false }
# op-revm = { path = "../patch/revm/crates/optimism", default-features = false }
# revm-inspectors = { path = "../patch/revm-inspectors" }

# alloy
alloy-chains = { version = "0.2.5", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false, features = ["sha3-keccak", "map-foldhash"] }
alloy-rlp = "0.3.10"
alloy-trie = "0.9.1"

alloy-evm = { git = "https://github.com/ziren-patches/evm", branch = "patch-0.21.3", default-features = false }
alloy-provider = { version = "1.0.37", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
    "debug-api",
] }
alloy-rpc-types = { version = "1.0.37", default-features = false, features = [
    "eth",
] }
alloy-json-rpc = { version = "1.0.37", default-features = false }
alloy-genesis = { version = "1.0.37", default-features = false }
alloy-consensus = { version = "1.0.37", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-network = { version = "1.0.37", default-features = false }
alloy-transport = { version = "1.0.37", default-features = false }
alloy-transport-http = { version = "1.0.37", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { version = "1.0.37" }
alloy-rpc-client = { version = "1.0.37", default-features = false }
alloy-rpc-types-debug = { version = "1.0.37", default-features = false }
alloy-eips = { version = "1.0.37", default-features = false }
alloy-serde = "1.0.37"

# op
alloy-op-evm = { git = "https://github.com/ziren-patches/evm", branch = "patch-0.21.3", default-features = false }
op-alloy-consensus = "0.20.0"
op-alloy-network = "0.20.0"
op-alloy-rpc-types = "0.20.0"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/ziren-patches/RustCrypto-hashes", branch = "patch-sha2-0.10.9", package = "sha2" }
bn = { git = "https://github.com/ziren-patches/bn", branch = "patch-0.6.0", package = "substrate-bn" }
k256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-k256-0.13.4" }
p256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-p256-0.13.2" }
alloy-primitives-v1-2-1 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.2.1" }
