[package]
name = "rpc-db"
description = ""
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

# reth
reth-storage-errors.workspace = true

# revm
revm-database.workspace = true
revm-database-interface.workspace = true
revm-primitives.workspace = true
revm-state.workspace = true

# alloy
alloy-consensus = { workspace = true, optional = true }
alloy-eips = { workspace = true, optional = true }
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types = { workspace = true, optional = true }
alloy-rpc-types-debug = { workspace = true, optional = true }
alloy-transport.workspace = true
alloy-rlp = { workspace = true, optional = true }
alloy-trie = { workspace = true, optional = true, features = ["ethereum"] }

serde = { workspace = true, optional = true }

mpt.workspace = true
primitives.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["execution-witness"]
execution-witness = [
    "dep:alloy-consensus",
    "dep:alloy-eips",
    "dep:alloy-rpc-types",
    "dep:alloy-rpc-types-debug",
    "dep:alloy-rlp",
    "dep:alloy-trie",
    "dep:serde",
    "alloy-provider/debug-api"
]
